--- a/repleetfrontend.client/package.json
+++ b/repleetfrontend.client/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "build:css": "tailwind build -i src/index.css -o src/style.css",
+    "build:css-prod": "tailwind build -i src/index.css -o dist/style.css",
     "watch:css": "postcss src/index.css -o src/style.css --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
