--- a/repleetfrontend.client/render.yaml
+++ b/repleetfrontend.client/render.yaml
@@ -1,5 +1,5 @@
 services:
-  - type: static_site
+  - type: web
     name: repleetfrontend
     repo: https://github.com/GonzaloAllenPerez444/RepleetFrontend
     branch: main
