--- a/repleetfrontend.client/render.yaml
+++ b/repleetfrontend.client/render.yaml
@@ -5,7 +5,7 @@ services:
     branch: main
     rootDir: repleetfrontend.client
     buildCommand: npm install && npm run build
-    publishPath: dist
+    startCommand: serve -s dist
     envVars:
       - key: VITE_API_URL
         value: https://repleet.azurewebsites.net
