--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,6 @@
 services:
-  - type: static
+  - type: web
+    runtime: static
     name: repleetfrontend
     repo: https://github.com/GonzaloAllenPerez444/RepleetFrontend
     branch: main
