--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     runtime: static
     name: repleetfrontend
     repo: https://github.com/GonzaloAllenPerez444/RepleetFrontend
-    branch: main
+    branch: master
     rootDir: repleetfrontend.client
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
