--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     routes:
       - type: rewrite
         source: /*
-        destination: /index.html
+        destination: /
         
 
 
